2002-05-27  Nick Clifton  <nickc@cambridge.redhat.com>

	* configure.in (ALL_LINGUAS): Add sv
	* po/sv.po: New file.

2002-05-27  Alan Modra  <amodra@bigpond.net.au>

	* unwind-ia64.c (unw_print_brmask): Don't use sprintf.
	(unw_print_grmask): Likewise.
	(unw_print_frmask): Likewise.

2002-05-26  Kazu Hirata  <kazu@cs.umass.edu>

	* arsup.c: Remove ARGSUSED.
	* debug.c: Likewise.
	* ieee.c: Likewise.
	* nlmconv.c: Likewise.
	* prdbg.c: Likewise.
	* stabs.c: Likewise.
	* wrstabs.c: Likewise.

2002-05-25  Alan Modra  <amodra@bigpond.net.au>

	* arlex.l: Use #include "" instead of <> for local header files.
	* coffdump.c: Likewise.
	* coffgrok.c: Likewise.
	* nlmconv.c: Likewise.
	* nlmheader.y: Likewise.
	* srconv.c: Likewise.
	* strings.c: Likewise.
	* sysdump.c: Likewise.
	* unwind-ia64.h: Likewise.
	* windres.h: Likewise.
	* winduni.h: Likewise.

2002-05-24  Tom Rix  <trix@redhat.com>

	* MAINTAINERS: Add self as the d10v maintainer.

2002-05-24   TAMURA Kent <kent@netbsd.org>

	* configure.in: Builds dlltool for i386-netbsdpe.
	* configure: Regenerate.

2002-05-23  Kazu Hirata  <kazu@cs.umass.edu>

	* size.c: Fix formatting.
	* srconv.c: Likewise.
	* stabs.c: Likewise.
	* sysdump.c: Likewise.
	* unwind-ia64.c: Likewise.
	* wrstabs.c: Likewise.

2002-05-23  Jakub Jelinek  <jakub@redhat.com>

	* readelf.c (get_segment_type): Add PT_TLS.
	(get_elf_section_flags): Add SHF_TLS.
	(get_dynamic_flags): Optimize.  Add DF_STATIC_TLS.
	(process_dynamic_segment): Use puts instead of printf.
	(get_symbol_type): Support STT_TLS.
	* objdump.c (dump_section_header): Remove SEC_CONSTRUCTOR_TEXT,
	SEC_CONSTRUCTOR_DATA, SEC_CONSTRUCTOR_BSS.
	Add SEC_THREAD_LOCAL.

2002-05-23  Kazu Hirata  <kazu@cs.umass.edu>

	* rdcoff.c: Fix formatting.
	* rddbg.c: Likewise.
	* readelf.c: Likewise.
	* rename.c: Likewise.
	* resbin.c: Likewise.
	* resrc.c: Likewise.
	* resres.c: Likewise.

2002-05-21  Kazu Hirata  <kazu@cs.umass.edu>

	* filemode.c: Fix formatting.
	* ieee.c: Likewise.